--- a/resources/views/frontend/ordensservicos/show.edge
+++ b/resources/views/frontend/ordensservicos/show.edge
@@ -83,7 +83,7 @@
         <table id="containertask">
           <div>
 
-            <thead>
+            <thead id="containertask-head">
                 <tr>
                     <th>Serviço/Produto</th>
                     <th>Categoria</th>
