--- a/resources/views/frontend/ordensservicos/create-servico.edge
+++ b/resources/views/frontend/ordensservicos/create-servico.edge
@@ -47,7 +47,7 @@
             <form action="/os/store-step2/" method="POST">
               {{ csrfField() }}
               <td><input type="text" placeholder="" name="categoria" value="{{ servico.categoria }}" readonly /></td>    
-              <td><input type="text" placeholder="" name="valor" value="{{ servico.valor }}" readonly /></td>
+              <td><input type="number" step="0.01" min="0" placeholder="" name="valor" value="{{ servico.valor }}" readonly /></td>
               <td><input type="number" placeholder="quantidade" name="quantidade" value="" min=1 step=1 required /></td>
               <td>
                 <input hidden type="number" placeholder="" name="ordem_servico_id" value="{{ ordem_servico_id }}"  />
