--- a/resources/views/frontend/ordensservicos/create-produto.edge
+++ b/resources/views/frontend/ordensservicos/create-produto.edge
@@ -47,7 +47,7 @@
             <td>Produto</td>    
             <form action="/os/store-step3/" method="POST">
               {{ csrfField() }}
-              <td><input type="text" placeholder="" name="valor_venda" value="{{ produto.valor_venda }}" readonly /></td>
+              <td><input type="number" step="0.01" min="0" placeholder="" name="valor_venda" value="{{ produto.valor_venda }}" readonly /></td>
               <td><input type="number" placeholder="quantidade" name="quantidade" value="" min=1 step=1 required /></td>
               <td>
                 <input hidden type="number" placeholder="" name="ordem_servico_id" value="{{ ordem_servico_id }}"  />
