--- a/resources/views/frontend/ordensservicos/edit-os.edge
+++ b/resources/views/frontend/ordensservicos/edit-os.edge
@@ -91,7 +91,7 @@
 
 
     <div class="label-float">
-      <input type="number" min=0 max=100 step=0.01  name="desconto" value="{{ old('desconto', ordensservico.desconto*100 ) }}" required/>
+      <input type="number" step="0.01" min="0"  name="desconto" value="{{ old('desconto', ordensservico.desconto*100 ) }}" required/>
       <label>Desconto (%)</label>
       @if(hasErrorFor('desconto')) 
           <span class= "mens-error"> {{ getErrorFor('desconto') }} </span>
