--- a/resources/views/frontend/ordensservicos/edit-produto.edge
+++ b/resources/views/frontend/ordensservicos/edit-produto.edge
@@ -40,7 +40,7 @@
             <td>Produto</td>    
             <form action="/os/update-step3/{{ produto.ordem_servico_id }}/{{ produto.produto_id }}" method="POST">
               {{ csrfField() }}
-              <td><input type="text" placeholder="" name="valor_venda" value="{{ produto.valor_venda }}" readonly /></td>
+              <td><input type="number" step="0.01" min="0" placeholder="" name="valor_venda" value="{{ produto.valor_venda }}" readonly /></td>
               <td><input type="number" placeholder="" name="quantidade" value="{{ old('quantidade', produto_ordensservico.quantidade) }}" min=1 step=1 required /></td>
               <td> 
                 <input hidden type="number" placeholder="" name="ordem_servico_id" value="{{ produto_ordensservico.ordem_servico_id }}"  />
