--- a/resources/views/frontend/ordensservicos/edit-servico.edge
+++ b/resources/views/frontend/ordensservicos/edit-servico.edge
@@ -40,7 +40,7 @@
             <form action="/os/update-step2/{{ servico.ordem_servico_id }}/{{ servico.servico_id }}" method="POST">
               {{ csrfField() }}
               <td><input type="text" placeholder="" name="categoria" value="{{ servico.categoria }}" readonly /></td>
-              <td><input type="text" placeholder="" name="valor" value="{{ servico.valor }}" readonly /></td>
+              <td><input type="number" step="0.01" min="0" placeholder="" name="valor" value="{{ servico.valor }}" readonly /></td>
               <td><input type="number" placeholder="" name="quantidade" value="{{ old('quantidade', servico_ordensservico.quantidade) }}" min=1 step=1 required /></td>
               <td> 
                 <input hidden type="number" placeholder="" name="ordem_servico_id" value="{{ servico_ordensservico.ordem_servico_id }}"  />
