--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -29,7 +29,7 @@
       </div>
 
       <div class="label-float">
-        <input type="real" placeholder=" " name="valor_compra" value="{{ old('valor_compra', '') }}" required/>
+        <input type="number" step="0.01" min="0" placeholder=" " name="valor_compra" value="{{ old('valor_compra', '') }}" required/>
         <label>Valor Compra</label>
         @if(hasErrorFor('valor_compra'))
         <span class= "mens-error"> {{ getErrorFor('valor_compra') }} </span>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="label-float">
-        <input type="real" placeholder=" " name="valor_venda" value="{{ old('valor_venda', '') }}" required/>
+        <input type="number" step="0.01" min="0" placeholder=" " name="valor_venda" value="{{ old('valor_venda', '') }}" required/>
         <label>Valor Venda</label>
         @if(hasErrorFor('valor_venda'))
         <span class= "mens-error"> {{ getErrorFor('valor_venda') }} </span>
