--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -17,7 +17,7 @@
           <a id="cor" class="nav-link" href="/clientes">Clientes</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="">Relatórios [em breve]</a>
+          <a id="cor" class="nav-link" href="/relatorios">Relatórios</a>
         </li>
         @endloggedIn
 
