--- a/resources/views/frontend/clientes/edit.edge
+++ b/resources/views/frontend/clientes/edit.edge
@@ -3,7 +3,10 @@
 @section("content")
 
 <div id="lista-altera-cliente">
-  
+    <button id="icone-back" type="submit">
+      <span class="material-icons">arrow_back
+        </span>
+    </button>
     <h3>Alterar Cliente: {{ cliente.nome }}</h3>
 
     <div id="busca">
