--- a/resources/views/frontend/ordensservicos/create-os.edge
+++ b/resources/views/frontend/ordensservicos/create-os.edge
@@ -3,6 +3,10 @@
 @section("content")
 
 <div id="lista-cadastro-NovaOs">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Nova Ordem de Serviço</h3>
 
   <form action="/os/store-step1" method="POST">
