--- a/resources/views/frontend/ordensservicos/edit-os.edge
+++ b/resources/views/frontend/ordensservicos/edit-os.edge
@@ -3,6 +3,10 @@
 @section("content")
 
 <div id="lista-cadastro-cliente">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Alterar Ordem de Serviço Nº {{ ordensservico.id }}.</h3>
 
 
