--- a/resources/views/frontend/ordensservicos/edit-servico.edge
+++ b/resources/views/frontend/ordensservicos/edit-servico.edge
@@ -8,7 +8,10 @@
 
 <div id="lista">
 
-
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Ordem de Serviço: Editar serviço</h3>
   <div>
 
