--- a/resources/views/frontend/ordensservicos/escolhe-cliente.edge
+++ b/resources/views/frontend/ordensservicos/escolhe-cliente.edge
@@ -8,6 +8,10 @@
 
 <div id="lista">
 
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
 
   <h3>Ordem de Serviço: Escolha um Cliente</h3>
   <div>
