--- a/resources/views/frontend/ordensservicos/show.edge
+++ b/resources/views/frontend/ordensservicos/show.edge
@@ -9,7 +9,10 @@
 
 <div id="lista-cadastro-ordemservico">
 
-  
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Ordem de Serviço Nº {{ordensservico.id}}. </h3>
 
     <div>
