--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -4,6 +4,10 @@
 @section("content")
 
 <div id="lista-cadastro">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Novo Produto</h3>
 
   <form action="/produto/create" method="POST">
