--- a/resources/views/frontend/produtos/index.edge
+++ b/resources/views/frontend/produtos/index.edge
@@ -8,6 +8,11 @@
 @endif
 
 <div id="lista">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
+  
   <h3>Produtos</h3>
   <div>
     <form action="/produtos" method="POST">
