--- a/resources/views/frontend/produtos/show.edge
+++ b/resources/views/frontend/produtos/show.edge
@@ -7,7 +7,10 @@
 @endif
 
 <div id="lista-mostra-cliente">
-
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Produto: {{ produto.nome }}</h3>
   <div>
     
