--- a/resources/views/frontend/relatorios/aniversariantes.edge
+++ b/resources/views/frontend/relatorios/aniversariantes.edge
@@ -7,6 +7,10 @@
 @endif
 
 <div id="lista">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Aniversariantes do dia</h3>
           
   <div>
