--- a/resources/views/frontend/relatorios/os-por-mes.edge
+++ b/resources/views/frontend/relatorios/os-por-mes.edge
@@ -6,9 +6,12 @@
 <span class="sucesso">{{ flashMessage('notification') }}</span>
 @endif
 
-<div id="lista">
+<div id="lista-">
 
-
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Ordem de Serviços: Mês {{ mes_ano }}</h3>
   <div>
  
