--- a/resources/views/frontend/servicos/create.edge
+++ b/resources/views/frontend/servicos/create.edge
@@ -3,6 +3,10 @@
 @section("content")
 
   <div id="lista-cadastro-cliente">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">arrow_back
+        </span>
+    </button>
     <h3>Novo Serviço</h3>
 
 
