--- a/resources/views/frontend/servicos/index.edge
+++ b/resources/views/frontend/servicos/index.edge
@@ -8,6 +8,10 @@
 
 
 <div id="lista">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Serviços</h3>
   <div>
     <form action="/servicos" method="POST"> 
