--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -3,6 +3,10 @@
 @section("content")
 
 <div id="lista-cadastro-cliente">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Novo Cliente</h3>
 
   <form action="/cliente/create" method="POST">
