--- a/resources/views/frontend/usuarios/show.edge
+++ b/resources/views/frontend/usuarios/show.edge
@@ -7,6 +7,10 @@
 @endif
 
 <div id="lista-mostra-cliente">
+  <button id="icone-back" type="submit">
+    <span class="material-icons">arrow_back
+      </span>
+  </button>
   <h3>Serviço: {{ usuario.username }}</h3>
   <div>
   
