Ajustes temporários botao voltar

--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -3,10 +3,16 @@
 @section("content")
 
 <div id="lista-cadastro-cliente">
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+  
+  <form action="/clientes" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+  
+
   <h3>Novo Cliente</h3>
 
   <form action="/cliente/create" method="POST">
