--- a/resources/views/frontend/ordensservicos/edit-os.edge
+++ b/resources/views/frontend/ordensservicos/edit-os.edge
@@ -3,10 +3,15 @@
 @section("content")
 
 <div id="lista-cadastro-cliente">
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+  
+  <form action="/os" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+
   <h3>Alterar Ordem de Serviço Nº {{ ordensservico.id }}.</h3>
 
 
