--- a/resources/views/frontend/ordensservicos/edit-produto.edge
+++ b/resources/views/frontend/ordensservicos/edit-produto.edge
@@ -8,10 +8,14 @@
 
 <div id="lista">
 
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+  <form action="/os/show/{{ produto_ordensservico.ordem_servico_id }}" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+
   <h3>Ordem de Serviço: Editar produto</h3>
   <div>
 
@@ -19,9 +23,9 @@
   </div>
 
   
-             @if(hasErrorFor('quantidade')) 
-              <span class= "mens-error"> {{ getErrorFor('quantidade') }} no campo quantidade </span>
-            @endif
+  @if(hasErrorFor('quantidade')) 
+    <span class= "mens-error"> {{ getErrorFor('quantidade') }} no campo quantidade </span>
+  @endif
 
 
     <table id="tabela">
@@ -35,8 +39,6 @@
         </tr>
       </thead>
       <tbody>
-
-
 
           <tr>
             <td><a href="/produto/show/{{ produto.id }}">{{ produto.nome }}</a></td>
