--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -1,13 +1,17 @@
-{{--provisório para testes--}}
 @layout("layouts.master")
 
 @section("content")
 
 <div id="lista-cadastro">
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+
+  <form action="/produtos" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+
   <h3>Novo Produto</h3>
 
   <form action="/produto/create" method="POST">
