--- a/resources/views/frontend/relatorios/os-por-mes.edge
+++ b/resources/views/frontend/relatorios/os-por-mes.edge
@@ -6,12 +6,17 @@
 <span class="sucesso">{{ flashMessage('notification') }}</span>
 @endif
 
-<div id="lista-">
+<div id="lista">
 
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
-      </span>
-  </button>
+
+    <form action="/relatorios" method="get">
+      <button id="icone-back" type="submit">
+        <span class="material-icons">
+          arrow_back
+        </span>
+      </button>
+    </form>
+
   <h3>Ordem de Serviços: Mês {{ mes_ano }}</h3>
   <div>
  
