--- a/resources/views/frontend/servicos/edit.edge
+++ b/resources/views/frontend/servicos/edit.edge
@@ -3,10 +3,15 @@
 @section("content")
 
   <div id="lista-altera-cliente">
-    <button id="icone-back" type="submit">
-      <span class="material-icons">arrow_back
+
+    <form action="/servicos" method="get">
+      <button id="icone-back" type="submit">
+        <span class="material-icons">
+          arrow_back
         </span>
-    </button>
+      </button>
+    </form>
+
     <h3>Editar Serviço: {{ servico.nome }}</h3>
 
     <form action="/servico/update/{{ servico.id }}" method="POST">
