--- a/resources/views/frontend/usuarios/create.edge
+++ b/resources/views/frontend/usuarios/create.edge
@@ -3,10 +3,15 @@
 @section("content")
 
   <div id="lista-cadastro-cliente">
-    <button id="icone-back" type="submit">
-      <span class="material-icons">arrow_back
+
+    <form action="/usuarios" method="get">
+      <button id="icone-back" type="submit">
+        <span class="material-icons">
+          arrow_back
         </span>
-    </button>
+      </button>
+    </form>
+
     <h3>Novo Usuário</h3>
 
 
