--- a/resources/views/frontend/ordensservicos/edit-servico.edge
+++ b/resources/views/frontend/ordensservicos/edit-servico.edge
@@ -8,10 +8,14 @@
 
 <div id="lista">
 
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+  <form action="/os/show/{{ servico_ordensservico.ordem_servico_id }}" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+
   <h3>Ordem de Serviço: Editar serviço</h3>
   <div>
 
