--- a/resources/views/frontend/ordensservicos/escolhe-cliente.edge
+++ b/resources/views/frontend/ordensservicos/escolhe-cliente.edge
@@ -8,10 +8,14 @@
 
 <div id="lista">
 
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+
+  <form action="/os" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
 
   <h3>Ordem de Serviço: Escolha um Cliente</h3>
   <div>
