--- a/resources/views/frontend/relatorios/index.edge
+++ b/resources/views/frontend/relatorios/index.edge
@@ -8,24 +8,17 @@
 @endif
 
 <div id="lista-altera-cliente">
-    <button id="icone-back" type="submit">
-      <span class="material-icons">arrow_back</span>
-    </button>
 
     <h3>Relatórios</h3>
 
-  <form action="relatorios/os-mes-ano" method="get">
-      {{ csrfField() }}
             <button id="icone-pesquisa" type="submit">
               <span class="material-icons">search</span>
             </button>
             <input id="pesquisar" type="search" name="search" value="" placeholder="Pesquisar" />
   
-
     <div id="busca">
     </div>
     
-      
     <div id="box-relatorios"> 
         
       <div id="div-relatorios">
@@ -33,10 +26,11 @@
       </div>
       <div id="div-relatorios">
         
-          <button type="submit"  class="botao-consulta-os" onclick="/relatorios/aniversariantes">
+      <a href="/relatorios/aniversariantes">
+          <button type="submit" class="botao-consulta-os">
             Consultar
           </button>
-        
+      </a>
       </div>
 
     </div>   
@@ -46,7 +40,9 @@
       <div id="div-relatorios">
         <label> Ordens de Serviço por Mês </label>
       </div>
-          
+        
+      <form action="relatorios/os-mes-ano" method="get">
+      {{ csrfField() }}
       <div id="div-relatorios">
             <select id="drop-list-mes-ano" onchange="selecionaMesAno()">
               <option value="" {{ old('mes_ano', '') == '' ? "selected" : '' }}>Selecione mês e ano</option>
