--- a/resources/views/frontend/servicos/show.edge
+++ b/resources/views/frontend/servicos/show.edge
@@ -7,10 +7,15 @@
 @endif
 
 <div id="lista-mostra-cliente">
-  <button id="icone-back" type="submit">
-    <span class="material-icons">arrow_back
+
+  <form action="/servicos" method="get">
+    <button id="icone-back" type="submit">
+      <span class="material-icons">
+        arrow_back
       </span>
-  </button>
+    </button>
+  </form>
+
   <h3>Serviço: {{ servico.nome }}</h3>
   <div>
   
