Novos ajustes botao voltar

--- a/resources/views/frontend/ordensservicos/create-os.edge
+++ b/resources/views/frontend/ordensservicos/create-os.edge
@@ -4,13 +4,12 @@
 
 <div id="lista-cadastro-NovaOs">
 
-  <form action="/os/create-step0" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
 
   <h3>Nova Ordem de Serviço</h3>
 
