--- a/resources/views/frontend/ordensservicos/escolhe-cliente.edge
+++ b/resources/views/frontend/ordensservicos/escolhe-cliente.edge
@@ -9,13 +9,12 @@
 <div id="lista">
 
 
-  <form action="/os" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
 
   <h3>Ordem de Serviço: Escolha um Cliente</h3>
   <div>
