--- a/resources/views/frontend/ordensservicos/show.edge
+++ b/resources/views/frontend/ordensservicos/show.edge
@@ -9,13 +9,12 @@
 
 <div id="lista-cadastro-ordemservico">
 
-  <form action="/os" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
   <h3>Ordem de Serviço Nº {{ordensservico.id}}. </h3>
 
     <div>
