--- a/resources/views/frontend/relatorios/aniversariantes.edge
+++ b/resources/views/frontend/relatorios/aniversariantes.edge
@@ -8,13 +8,11 @@
 
 <div id="lista">
 
-    <form action="/relatorios" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
 
   <h3>Aniversariantes do dia</h3>
           
