--- a/resources/views/frontend/servicos/create.edge
+++ b/resources/views/frontend/servicos/create.edge
@@ -4,13 +4,11 @@
 
   <div id="lista-cadastro-cliente">
 
-  <form action="/servicos" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
 
   <h3>Novo Serviço</h3>
 
