--- a/resources/views/frontend/servicos/show.edge
+++ b/resources/views/frontend/servicos/show.edge
@@ -8,16 +8,17 @@
 
 <div id="lista-mostra-cliente">
 
-  <form action="/servicos" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
 
   <h3>Serviço: {{ servico.nome }}</h3>
   <div>
+
+    <div id="busca">
+    </div>
   
     <table id="tabela">
      
