--- a/resources/views/frontend/clientes/show.edge
+++ b/resources/views/frontend/clientes/show.edge
@@ -7,15 +7,21 @@
 @endif
 
 <div id="lista-mostra-cliente">
-  <form action="/clientes" method="get">
-    <button id="icone-back" type="submit">
+
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
   <h3>Cliente: {{ cliente.nome }}</h3>
+    
+  <div id="busca">
+  </div>
+
   <div>
+
+
          
       <table id="tabela">
             
