--- a/resources/views/frontend/ordensservicos/edit-os.edge
+++ b/resources/views/frontend/ordensservicos/edit-os.edge
@@ -4,13 +4,12 @@
 
 <div id="lista-cadastro-cliente">
   
-  <form action="/os" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
 
   <h3>Alterar Ordem de Serviço Nº {{ ordensservico.id }}.</h3>
 
