--- a/resources/views/frontend/ordensservicos/edit-servico.edge
+++ b/resources/views/frontend/ordensservicos/edit-servico.edge
@@ -8,13 +8,12 @@
 
 <div id="lista">
 
-  <form action="/os/show/{{ servico_ordensservico.ordem_servico_id }}" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
+
 
   <h3>Ordem de Serviço: Editar serviço</h3>
   <div>
