--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -4,13 +4,11 @@
 
 <div id="lista-cadastro">
 
-  <form action="/produtos" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
 
   <h3>Novo Produto</h3>
 
