--- a/resources/views/frontend/produtos/edit.edge
+++ b/resources/views/frontend/produtos/edit.edge
@@ -5,13 +5,11 @@
 
 <div id="lista-cadastro">
 
-  <form action="/produtos" method="get">
-    <button id="icone-back" type="submit">
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
       <span class="material-icons">
         arrow_back
       </span>
     </button>
-  </form>
 
   <h3>Alterar produto: {{ produto.nome }}</h3>
 
