--- a/resources/views/frontend/relatorios/os-por-mes.edge
+++ b/resources/views/frontend/relatorios/os-por-mes.edge
@@ -9,13 +9,11 @@
 <div id="lista">
 
 
-    <form action="/relatorios" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
 
   <h3>Ordem de Serviços: Mês {{ mes_ano }}</h3>
   <div>
