--- a/resources/views/frontend/servicos/edit.edge
+++ b/resources/views/frontend/servicos/edit.edge
@@ -4,13 +4,13 @@
 
   <div id="lista-altera-cliente">
 
-    <form action="/servicos" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
+
 
     <h3>Editar Serviço: {{ servico.nome }}</h3>
 
