--- a/resources/views/frontend/usuarios/create.edge
+++ b/resources/views/frontend/usuarios/create.edge
@@ -4,13 +4,11 @@
 
   <div id="lista-cadastro-cliente">
 
-    <form action="/usuarios" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
 
     <h3>Novo Usuário</h3>
 
