--- a/resources/views/frontend/usuarios/edit.edge
+++ b/resources/views/frontend/usuarios/edit.edge
@@ -4,13 +4,11 @@
 
   <div id="lista-altera-cliente">
     
-    <form action="/usuarios" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
 
     <h3>Editar Usuário: {{ usuario.username }}</h3>
 
