--- a/resources/views/frontend/usuarios/show.edge
+++ b/resources/views/frontend/usuarios/show.edge
@@ -8,15 +8,18 @@
 
 <div id="lista-mostra-cliente">
 
-    <form action="/usuarios" method="get">
-      <button id="icone-back" type="submit">
-        <span class="material-icons">
-          arrow_back
-        </span>
-      </button>
-    </form>
+    <button id="icone-back" type="submit" onclick="window.history.back();return false;" > 
+      <span class="material-icons">
+        arrow_back
+      </span>
+    </button>
 
-  <h3>Serviço: {{ usuario.username }}</h3>
+  <h3>Usuário: {{ usuario.username }}</h3>
+
+     <div id="busca">
+    </div>
+
+
   <div>
   
     <table id="tabela">
